<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">BBQube</string>
    <string name="action_settings">Settings</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect to a BBQube device</string>
    <string name="disconnect">Disconnect current BBQube device</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="start">Set Temp</string>
    <string name="cold_smoke">Cold Smoke</string>
    <string name="max_fan">Max Fan</string>
    <string name="sous_vide">Sous Vide</string>
    <string name="electrical_smoke">Electrical Smoke</string>
    <string name="stop">Stop</string>

    <!--  MainActivity -->
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No BBQube device found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for more devices</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_realtimelinechart">RealtimeLineChart</string>



</resources>


