<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/secure_connect_scan"
        android:title="@string/secure_connect"/>

    <item
        android:id="@+id/disconnect_current"
        android:title="@string/disconnect"/>

    <item
        android:id="@+id/monitor_start"
        android:title="@string/start"/>
    <item
        android:id="@+id/monitor_cs"
        android:title="@string/cold_smoke"/>
    <item
        android:id="@+id/sous_vide"
        android:title="@string/sous_vide"/>
    <item
        android:id="@+id/electrical_smoke"
        android:title="@string/electrical_smoke"/>
    <item
        android:id="@+id/monitor_mf"
        android:title="@string/max_fan"/>
    <item
        android:id="@+id/monitor_stop"
        android:title="@string/stop"/>
</menu>
